Some more Changes

--- a/README
+++ b/README
@@ -33,6 +33,9 @@ Brainstorm:
 
  * Dar ao jogador uma bomba de som para que ele possa matar todos os zumbis na tela através de uma alta frequência;
 
+ * O Jogo irá ter um segundo modo, sendo de sobrevivencia nas fases, e ao trocar o mapa, irá ter um helicoptero passando
+   por cima da mesma, com o objetivo de na fase final ele aterrisar para resgatar o agente;
+
 Tileset:
 
  *  http://silveiraneto.net/tag/pixelart
